# Winsor-CAM

./: .gitattributes  README.md  pyproject.toml  winsorcam.py
advanced_examples/: UI.py  pacalvoc_example.ipynb  utils.py
simple_example/: test.py
